--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 header {
   background-color: black;
-  height: 100px;
+  height: 90px;
 }
 
 main {
@@ -33,8 +33,8 @@ main {
 }
 
 #winner-display {
-  height: 50px;
-  width: 200px;
+  height: 65px;
+  width: 300px;
   border: 2px solid black
 }
 
@@ -85,7 +85,13 @@ h2 {
   width: 100%;
 }
 
-#start {
+#start-reset {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+#start, #reset {
   width: 100px;
   height: 30px;
 }
