--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ main {
 }
 
 .grid div {
-  border: 1px solid rgba(51, 51, 51, 0.849);
+  border: 1px solid rgba(51, 51, 51, 0.8);
   flex-grow: 1;
   height: 10%;
   width: 10%;
@@ -155,11 +155,15 @@ h3 {
 #start, #reset {
   width: 100px;
   height: 30px;
+  background-image: url('Assets/industrial-metal-plate-on-vintage-808886.jpeg');
+  background-size: cover;
 }
 
 .ships {
   width: 100px;
   height: 30px;
+  background-image: url('Assets/industrial-metal-plate-on-vintage-808886.jpeg');
+  background-size: cover;
 }
 
 .emptySquare {
@@ -185,20 +189,27 @@ h3 {
 .turn {
   width: 45px;
   height: 45px;
-  background-color: red;
+  /* background-color: red; */
+  background-image: url('Assets/greenliugt.gif');
+  background-size: cover;
 }
 
 .hit {
-  background-color: green;
-  /* background-image: url('Assets/water splash.png'); */
+  background-color: rgb(99, 193, 209, 0.5);
+  /* background-image: url('Assets/splash gif.gif');
+  background-size: cover; */
   width: 35px;
   height: 35px;
 }
 
 .shipHit {
-  background-color: black;
+  /* background-color: black; */
+  /* background-image: url('Assets/explosion3.png'); */
+  background-color: rgb(197, 181, 31, 0.5);
+  /* background-size: cover; */
 }
 
 .attackHover {
-  background-image: url('Assets/water splash.png');
+  background-image: url('Assets/targetgif.gif');
+  background-size: cover;
 }
